upgrade lo4gi and jackson